--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Urbanist:wght@500&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Morning Coffee</title>
 </head>
 <body>
     <header class="header" >
