--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </div>
                         <div class="bg-div">
                             <div class="pokupka-produck">
-                                <img class="btn-shop"src="/img/product.png" alt="">
+                                <img class="btn-shop"src="img/product.png" alt="">
                               
                                 <div class="rating-area">
                                       <p>Coffee</p>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="bg-div">
                             <div class="pokupka-produck">
-                                <img class="btn-shop" src="/img/product.png" alt="">
+                                <img class="btn-shop" src="img/product.png" alt="">
                                 <div class="rating-area">
                                     <p>Coffee</p>
                                   <input type="radio" id="star-5" name="rating" value="5">
